fix start menu on ios

--- a/start-menu.css
+++ b/start-menu.css
@@ -19,12 +19,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100dvw;
-  height: 100dvh;
+  width: 100%;
+  height: 100%;
   top: 0%;
   left: 0%;
   background-color: black;
   overflow: hidden;
+
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: env(safe-area-inset-bottom);
 }
 
 .start-menu-container {
